k8s/keybuzz-admin-v2-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keybuzz-admin-v2-dev
  labels:
    app: keybuzz-admin-v2
    env: dev
